Added connect and disconnect event handlers

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
+<p>Welcome everyone! How are you?</p>
 
+
+<script src="/socket.io/socket.io.js"></script>
+<script>
+    let socket = io();
+
+    socket.on('connect', () => {
+        console.log('You are connected!');
+    })
+
+    socket.on('disconnect', () => {
+        console.log('You are disconnected!');
+    })
+
+</script>
 </body>
 </html>
